# hermes-google-workspace

./: .gitignore  LICENSE  README.en.md  README.md  SKILL.md  package.json  pyproject.toml
.github/workflows/: test.yml
scripts/: __init__.py  _gws_common.py  _gws_env.py  google_api.py  scopes.py  setup.py
tests/: conftest.py  test_pure_helpers.py
workflows/: test.yml
